<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="weather">Weather</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="city">Paris</string>
    <string name="temperature">71°F</string>
    <string name="description">Clear skies</string>
    <string name="main">Clouds</string>
    <string name="last_updated">Updated 11/17 11:20 AM</string>
    <string name="weather_icon">weather icon</string>
    <string name="convert_units">metric or imperial units</string>
    <string name="wi_owm_200">&#xf01e;</string>
    <string name="revoltwind_com">REVOLTwind.com</string>
    <string name="wind_direction_content_description">wind direction</string>
    <string name="go_dark">Go dark</string>
    <string name="go_light">Go light</string>
    <string name="_11_19">11/19</string>
    <string name="c">°C</string>
    <string name="f">°F</string>
    <string name="dummy_number">5</string>
    <string name="units">m/s</string>
    <string name="pop">0%</string>

</resources>