<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:background="@drawable/custom_shape"
    android:orientation="vertical"
    android:padding="15dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/city"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="15sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/redhat"
            android:maxLines="2"
            android:text="@string/city"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/convert_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_toStartOf="@id/city"
            android:background="@color/transparent"
            android:contentDescription="@string/convert_units"
            android:src="@drawable/ic_toggle_off" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/redhat"
            android:letterSpacing="0.04"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <ImageView
            android:id="@+id/iconCondition"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/weather_icon"
            android:scaleType="fitEnd"
            android:src="@drawable/test_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/redhat"
        android:maxLines="1"
        android:text="@string/description"
        android:textAlignment="textStart"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/updated"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:drawableEnd="@drawable/ic_refresh_30"
        android:drawablePadding="2sp"
        android:fontFamily="@font/redhat"
        android:maxLines="1"
        android:text="@string/last_updated"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/revoltTextView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_bolt_30"
        android:drawablePadding="3dp"
        android:fontFamily="@font/redhat"
        android:text="@string/revoltwind_com"
        android:textColor="@color/white"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform" />

</LinearLayout>