<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="390dp"
    android:layout_height="250dp"
    android:background="@drawable/custom_shape"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.9974"
            android:fontFamily="@font/redhat"
            android:maxLines="1"
            android:text="@string/city"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/convert_f"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.08"
            android:fontFamily="@font/redhat"
            android:gravity="end"
            android:text="@string/f"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/convert_button"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:background="@color/transparent"
            android:contentDescription="@string/convert_units"
            android:src="@drawable/ic_toggle_off" />

        <TextView
            android:id="@+id/convert_c"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.08"
            android:fontFamily="@font/redhat"
            android:gravity="start"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forecast_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_weight="0.142"
            android:background="@drawable/custom_outline"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:id="@+id/date0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/oxygen"
                android:gravity="center"
                android:letterSpacing="0.04"
                android:text="@string/_11_19"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/highTemp0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen"
                android:gravity="center"
                android:letterSpacing="0.04"
                android:text="@string/temperature"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/iconCondition0"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:contentDescription="@string/weather_icon"
                android:scaleType="centerInside"
                android:src="@drawable/test_icon" />

            <TextView
                android:id="@+id/lowTemp0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen"
                android:gravity="center"
                android:letterSpacing="0.04"
                android:text="@string/temperature"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/description0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/oxygen"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/main"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/revoltTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/ic_bolt"
            android:drawablePadding="3dp"
            android:fontFamily="@font/redhat"
            android:gravity="start"
            android:text="@string/revoltwind_com"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/updated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableEnd="@drawable/ic_refresh"
            android:drawablePadding="3dp"
            android:fontFamily="@font/redhat"
            android:gravity="end"
            android:text="@string/last_updated"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
